<?xml version="1.0"?>
<package format="2">
  <name>gazebo_dev</name>
  <version>2.9.2</version>
  <description>
    Provides a cmake config for the default version of Gazebo for the ROS distribution.
  </description>

  <maintainer email="ahcorde@osrfoundation.org">Alejandro Hernández Cordero</maintainer>

  <license>Apache 2.0</license>

  <url type="website">http://gazebosim.org/tutorials?cat=connect_ros</url>
  <url type="bugtracker">https://github.com/ros-simulation/gazebo_ros_pkgs/issues</url>
  <url type="repository">https://github.com/ros-simulation/gazebo_ros_pkgs</url>

  <author>Dave Coleman</author>
  <author>John Hsu</author>
  <author>Johannes Meyer</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_export_depend>libgazebo11-dev</build_export_depend>
  <exec_depend>gazebo11</exec_depend>
</package>
